--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -2911,7 +2911,7 @@
             <i class="fa fa-commenting-o"></i>
             <span>Коментарий</span>
         </button>
-        <a href="#" id="lang-switcher" class="lang-switcher" style="margin-left: auto; color: #888; font-size: 14px; text-decoration: none;">{% if lang == 'en' %}RU{% else %}EN{% endif %}</a>
+        <a href="#" id="lang-switcher" class="lang-switcher" style="margin-left: auto; color: #888; font-size: 14px; text-decoration: none;">{% if lang == 'en' %}EN{% else %}RU{% endif %}</a>
     </div>
 
     <div id="adminCommentModal" class="admin-modal">
