--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -2692,7 +2692,7 @@
         <div class="cube-controls-block-wrapper">
             <div class="cube-controls-labels">
                 <label for="cube-shown-select" data-i18n="cube_shown">Показан куб?</label>
-                <label for="cube-shown-select" data-i18n="cube">Куб</label>
+                <label for="cube-value-select" data-i18n="cube">Куб</label>
                 <label for="cube-owner-select-btn" data-i18n="whose_cube">Чей куб?</label>
                 <label for="crawford-checkbox" id="crawford-label" style="display: none;" data-i18n="crawford">Кроуфорд</label>
             </div>
